# MoodClip

./: .gitignore  CMakeLists.txt  README.md  build_manual.sh  qml.qrc
src/: main.cpp  main_minimal.cpp
src/core/: AssetItem.cpp  AssetItem.h  AssetLibrary.cpp  AssetLibrary.h  Clip.cpp  Clip.h  ExportManager.cpp  ExportManager.h  ProjectManager.cpp  ProjectManager.h  StoryboardFrame.cpp  StoryboardFrame.h  StoryboardModel.cpp  StoryboardModel.h
src/qml/: Icon.qml  Icons.qml  Theme.qml  main.qml  qmldir
src/qml/components/: AppButton.qml  AppTextField.qml  AppWindow.qml  AssetGrid.qml  ConnectionLine.qml  IconButton.qml  ImageFrame.qml  MoodboardCanvas.qml  PageCounter.qml  ScriptEditor.qml  Sidebar.qml  StickyNote.qml  StoryboardFrameEditor.qml  StoryboardPage.qml  StoryboardShotCard.qml  StoryboardView.qml  TagPill.qml  qmldir.bak
src/qml/dialogs/: ExportDialog.qml  NewProjectDialog.qml  SettingsDialog.qml
